# mathconstruct

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
configs/: example.yaml
configs/ablation/: code-brute-force-infer.yaml  code-brute-force.yaml  cot-give-solution.yaml
configs/contamination/: cot-rephrase.yaml
configs/lengthstudy/: code-brute-force.yaml  cot-parser.yaml
configs/main/: code-parser.yaml  cot-parser-reasoning.yaml  cot-parser.yaml
data/: brute-force-infer.json  brute-force.json  rephrase.json  results.json  revised_problems.json  tokens.json
docker/: Dockerfile
src/app/: app.py
src/config/: __init__.py  meta_config.py  run_config.py  utils.py
src/math_construct/: __init__.py  parsing.py  templates.py  utils.py
src/math_construct/llm/: __init__.py  api.py  dummy.py  llm_costs.py
src/math_construct/llm/solvers/: __init__.py  code_solver.py  cot_solver.py  solver.py
src/math_construct/problems/: __init__.py  problem.py  templates.py
src/math_construct/problems/backups/: imc_problem_2022_6.py  problem0.py  problem_1990_3.py  problem_1998_1_3.py  problem_1999_3_4.py  problem_2001_4_5.py  problem_2003_1_1.py  problem_2003_1_3.py  problem_2006_14.py  problem_2006_2_p3.py  problem_2008_n5.py  problem_2009_4.py  problem_2011_3.py  problem_2012_4.py  problem_2014_n4.py  (+17 more)
src/scripts/: analyze.py  export_to_latex.py  refactor.py  rephrase.py  run.py
src/scripts/latex/: .gitignore  all_problems.tex  all_revised.tex  revised_problems.tex
src/tests/: test_parsing.py  test_problem.py  test_problems.py  test_solvers.py
(+126 files in other folders)
