[project]
name = "math-construct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mislav Balunovic", email = "mislav.balunovic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "openai>=1.59.5",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "sympy>=1.13.1",
    "torch >= 2.1.2",
    "tqdm >= 4.66.1",
    "transformers >= 4.36.2",
    "python-fasthtml>=0.12.0",
    "loguru >= 0.7.3",
    "google-genai>=0.6.0",
    "anthropic>=0.42.0",
    "matplotlib>=3.10.0",
    "scipy>=1.15.1",
    "antlr4-python3-runtime==4.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
